# fastapi-tarea3

./: README.md  pyproject.toml
app/: db.py  main.py  models.py
app/routers/: finanzas.py
src/fastapi_tarea3/: __init__.py
